--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ input {
   display: block;
   margin: 0 auto;
   font-family: "Montserrat", sans-serif;
-  font-size: 20pt;
+  font-size: 15px;
 }
 
 .tableDiv {
