--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,7 @@ td {
 
 .searchbar img {
   height: 40px;
+  width: 40px;
   border-radius: 100% 0% 0% 100%;
   border: 1px solid black;
   padding: 5px;
